Fix alignment of socials

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1059,6 +1059,7 @@ nav {
 
 main ul.social {
   list-style: none;
+  margin-left: 0;
 
   li {
     display: inline-block;
